sticky sidebar menu and fixed a few layout issues

--- a/services/web/src/semantic/globals/site.less
+++ b/services/web/src/semantic/globals/site.less
@@ -15,7 +15,8 @@
 *******************************/
 
 html,
-body {
+body,
+#root {
   height: 100%;
 }
 
@@ -211,4 +212,3 @@ footer {
   font-weight: bold;
   opacity: 0.2;
 }
-
